<resources>
    <string name="app_name">Kerberos</string>
    <string name="logo">Logo</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up">Sign up</string>
    <string name="have_account_login">Have an account? Login</string>
    <string name="login">Login</string>
    <string name="enter">Enter</string>
    <string name="doesnt_have_account">Doesn\'t have account? Sign up</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="messages">Messages</string>
    <string name="back">Back</string>
    <string name="chat">Chat</string>
    <string name="close">Close</string>
    <string name="chat_list">Chat list</string>
    <string name="add_chat">Add chat</string>
    <string name="create_chat">Create chat</string>
    <string name="start_chat">Start chat</string>
</resources>