<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignupActivity" android:background="@color/black">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp" app:srcCompat="@drawable/kerberos" android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/logo" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            style="@style/TextView_title" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintBottom_toTopOf="@+id/editTextEmailSignup"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text|textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmailSignup"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
            style="@style/EditText_form"
            android:hint="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/editTextPasswordSignup" android:autofillHints=""
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text|textPassword"
            android:ems="10"
            android:id="@+id/editTextPasswordSignup"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailSignup" android:hint="@string/password"
            style="@style/EditText_form"
            app:layout_constraintBottom_toTopOf="@+id/editTextRepeatPasswordSignup" android:importantForAutofill="no"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text|textPassword"
            android:ems="10"
            android:id="@+id/editTextRepeatPasswordSignup"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordSignup" android:hint="@string/repeat_password"
            style="@style/EditText_form"
            android:importantForAutofill="no"
            app:layout_constraintBottom_toTopOf="@+id/buttonSignup"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonSignup"
            style="@style/Button_text" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextRepeatPasswordSignup"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"/>
    <Button
            android:text="@string/have_account_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonLogin"
            app:layout_constraintTop_toBottomOf="@+id/buttonSignup" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" style="@style/Button_link"/>
</androidx.constraintlayout.widget.ConstraintLayout>