<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity" android:background="@color/black">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp" app:srcCompat="@drawable/kerberos" android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/logo" android:layout_marginTop="8dp"/>
    <TextView
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            style="@style/TextView_title" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintBottom_toTopOf="@+id/editTextEmailLogin"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text|textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextEmailLogin"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:hint="@string/email"
            style="@style/EditText_form" android:autofillHints=""
            app:layout_constraintBottom_toTopOf="@+id/editTextPasswordLogin"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text|textPassword"
            android:ems="10"
            android:id="@+id/editTextPasswordLogin"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmailLogin" android:hint="@string/password"
            style="@style/EditText_form" android:importantForAutofill="no"
            app:layout_constraintBottom_toTopOf="@+id/buttonEnter"/>
    <Button
            android:text="@string/enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonEnter"
            app:layout_constraintTop_toBottomOf="@+id/editTextPasswordLogin" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" style="@style/Button_text"
            app:layout_constraintBottom_toTopOf="@+id/buttonCreateAccount"/>
    <Button
            android:text="@string/doesnt_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/buttonCreateAccount"
            style="@style/Button_link" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonEnter"/>
</androidx.constraintlayout.widget.ConstraintLayout>